--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav class="navbar">My Weather App</nav>
+
+    <div class="container">
+        <div id="container1">
+            <div class="region-container">
+                <h2 class="location-name"></h2>
+
+                <div class="temp">
+                    <h3>25C</h3>
+                    <div class="PHWind">
+                        <p>precipitation</p>
+                        <p>Humidity</p>
+                        <p>Wind</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="search-box">
+                <input type="search" placeholder="search for region" />
+                <button type="submit">Search</button>
+
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
